# gnome-speaks

./: .claudeignore  .gitignore  CLAUDE.md  README.md  extension.js  fix-ydotool.sh  gnome-speaks-service.py  gnome-speaks.service  gnome-speaks.service.in  install-ydotool.sh  install.sh  meson.build  metadata.json  org.gnome.Speaks.service.in  prefs.js  stylesheet.css  sync-speech.sh
docs/superpowers/plans/: 2026-03-26-voice-feedback-overhaul.md
docs/superpowers/specs/: 2026-03-18-smart-llm-context-design.md
schemas/: org.gnome.shell.extensions.gnome-speaks.gschema.xml
speech/: audio.py  speech_tts.py  state.py  stt.py
